# ATLAS

./: .bandit  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  aegis.desktop  atlas-code-map.desktop  claude_assess.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  stage_config.py  start-app.sh  test_dedup.py  test_structured.py  test_terminal.py
.claude/: 01-current-phase.md  settings.local.json
.claude/hooks/: README.md  agent_template.py  audit_bridge.py
.code-map/: code-map.json  instance-graphs.json
.codex/: AGENTS.md
.gemini/: 01-current-phase.md  01-session-history.md
code_map/: analyzer.py  analyzer_registry.py  c_analyzer.py  call_tracer_v2.py  cli.py  constants.py  cpp_bridge.py  database.py  database_async.py  exceptions.py  git_history.py  js_analyzer.py  models.py  models.py.bak  scanner.py  server.py  settings.py  similarity_service.py  stage_toolkit.py  state.py  state_reporter.py  ts_analyzer.py  watcher.py
code_map/agent/: __init__.py  controller.py
code_map/analysis/: __init__.py  tree_sitter_base.py
code_map/api/: agent.py  analysis.py  audit.py  call_flow.py  claude_permissions.py  contracts.py  drift.py  error_handlers.py  graph.py  instance_graph.py  integrations.py  linters.py  notify.py  preview.py  routes.py  schemas.py  sequence.py  settings.py  similarity.py  stage.py  symbols.py  terminal.py  tracer.py
code_map/audit/: __init__.py  file_watcher_hook.py  hooks.py  storage.py
code_map/contracts/: __init__.py  discovery.py  evidence.py  rewriter.py  schema.py
code_map/drift/: __init__.py  analyzer.py  detectors.py  models.py
code_map/graph_analysis/: __init__.py
code_map/insights/: __init__.py  storage.py
code_map/integrations/: ollama_service.py
code_map/linters/: __init__.py  pipeline.py  storage.py  storage.py.backup
code_map/mcp/: __init__.py  approval_bridge.py  constants.py  mcp_config_template.json  permission_server.py  socket_server.py  tool_proxy_server.py
code_map/services/: insights_service.py  linters_service.py  watcher_manager.py
code_map/terminal/: __init__.py  agent_events.py  agent_parser.py  claude_runner.py  codex_runner.py  gemini_runner.py  json_parser.py  mcp_proxy_runner.py  pty_parser.py  pty_runner.py  pty_shell.py  sdk_runner.py  socketio_pty.py  tool_approval.py  winpty_shell.py
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp
cpp/src/core/: clone_extender.cpp  clone_extender.hpp  hash_index.cpp  hash_index.hpp  rolling_hash.cpp  rolling_hash.hpp  similarity_detector.cpp  similarity_detector.hpp
cpp/src/models/: clone_types.hpp  report.hpp
cpp/src/server/: json_protocol.hpp  uds_server.cpp  uds_server.hpp
cpp/src/tokenizers/: cpp_normalizer.cpp  cpp_normalizer.hpp  js_normalizer.cpp  js_normalizer.hpp  python_normalizer.cpp  python_normalizer.hpp  token_normalizer.hpp
cpp/src/utils/: file_utils.cpp  file_utils.hpp  lru_cache.hpp  thread_pool.hpp
cpp/tests/: test_cpp_normalizer.cpp  test_detector.cpp  test_hash_index.cpp  test_js_normalizer.cpp  test_phase3.cpp  test_python_normalizer.cpp  test_rolling_hash.cpp  test_uds_integration.py  validate_json_schema.py  verify_precision.py
cpp/tests/fixtures/: clone_type1_a.py  clone_type1_b.py  clone_type2_a.py  clone_type2_b.py  clone_type3_a.py  clone_type3_b.py  no_clones.py
cpp/tests/fixtures/edge_cases/: advanced_python_a.py  advanced_python_b.py  only_comments.py  only_imports.py  single_function.py
cpp/tests/fixtures/multilang/: calculator.cpp  calculator.ts  calculator_a.js  calculator_b.js  calculator_v2.cpp
cpp/tests/fixtures/precision/: true_negatives.py  true_positives.py
cpp/tests/fixtures/stress/: generate_stress_files.py  large_file_0.py  large_file_0_dup.py  large_file_1.py  large_file_2.py  large_file_3.py  large_file_4.py
cpp/tests/fixtures/stress/many_files/: module_0.py  module_1.py  module_10.py  module_11.py  module_12.py  module_13.py  module_14.py  module_15.py  module_16.py  module_17.py  module_18.py  module_19.py  module_2.py  module_20.py  module_21.py  module_22.py  module_23.py  module_24.py  module_25.py  module_26.py  module_27.py  module_28.py  module_29.py  module_3.py  module_30.py  module_31.py  module_32.py  module_33.py  module_34.py  module_35.py  module_36.py  module_37.py  module_38.py  module_39.py  module_4.py  module_40.py  module_41.py  module_42.py  module_43.py  module_44.py  (+10 more)
cpp/tools/: test_client.py
docs/: AEGIS_V2_SPECIFICATION_UML_2_XML.md  TerminalEmbed_manual_dims.tsx  TerminalEmbed_v3_fixed.tsx  audit-trail.md  audit_good_quality-md  backend-improvements.md  backend-sql-plan.md  backend_quickstart.md  call-flow-ideas.md  call-flow-ideas.rewritten.md  claude-agent-streaming.md  design-tokens-plan.md  ideas-for-remote-shell.md  mcp-permission-server-design.md  mcp-proxy-tool-approval.md  principios-de-programacion.md  refactoring-mcp-proxy-checklist.md  rules_of_gold_for_clean_code.md  sdk-tool-approval-architecture.md  superClaude-flags.md  version2-anexo-fase5.md  version2-anexo-multilenguaje.md  version2-plan.md
frontend/: package-lock.json  package.json  vite.config.ts
playground_zone/: operaciones_basicas.py
stage_init/: stage_update.py
tests/: test_agent_bridge.py  test_agent_controller.py  test_agent_parser.py  test_api.py  test_audit_hooks.py  test_c_analyzer.py  test_call_flow_baseline.py  test_call_flow_cpp_decisions.py  test_call_flow_decisions.py  test_codex_runner.py  test_complexity_consistency.py  test_complexity_manual.py  test_contracts.py  test_database.py  test_drift.py  test_evidence.py  test_file_watcher_hook.py  test_insights_scheduler.py  test_l4_analyzers.py  test_l4_python_analyzers.py  test_l4_typescript_analyzers.py  test_linters_pipeline.py  test_ollama_insights.py  test_services.py  test_similarity_integration.py  test_stage_config.py  test_state.py  test_terminal_pty.py  test_terminal_reconnect.md  test_type_resolver.py
(+288 files in other folders)
