[project]
name = "aegis"
version = "2.0.0"
description = "Stage-Aware Development Framework and Code Map Backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core backend
    "fastapi>=0.110,<0.120",
    "pydantic>=2.7,<3",
    "sqlmodel>=0.0.16,<1",
    "uvicorn[standard]>=0.29,<0.32",
    "watchdog>=3.0,<5",
    # Async database support
    "aiosqlite>=0.19,<1",
    # CLI
    "typer>=0.12,<1",
    "click>=8.0,<9",
    # Optional analyzers
    "beautifulsoup4>=4.12,<5",
    "esprima>=4.0,<5",
    "defusedxml>=0.7,<0.8",
    # Tree-sitter (NOT available for Python 3.13+)
    "tree_sitter>=0.20,<0.22",
    "tree_sitter_languages>=1.10,<2",
    # Anthropic SDK
    "anthropic>=0.40,<1",
    # Socket.IO for real-time terminal communication
    "python-socketio>=5.11,<6",
    # Platform-specific PTY shell support
    "pexpect>=4.9,<5; sys_platform != 'win32'",
    "pywinpty>=2.0,<3; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<0.28",
    # Linters / Static analysis
    "ruff>=0.5,<0.6",
    "black>=24.4,<25",
    "mypy>=1.10,<1.11",
    "bandit>=1.7.10,<1.8",
]

[project.scripts]
aegis = "code_map.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_map", "stage_init"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
